[package]
name = "kompo_fs"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2.169"
trie-rs = "0.4.2"
rustc-hash = "2"
kompo_storage = { path = "../kompo_storage" }
kompo_wrap = { path = "../kompo_wrap" } 
errno = "*"

[dev-dependencies]
kompo_fs_test_data = { path = "./kompo_fs_test_data" }
serial_test = "3"


[profile.release]
panic = "abort"
